--- a/index.html
+++ b/index.html
@@ -2,11 +2,60 @@
 <html>
 <head>
 <title>Sobia's Portfolio</title>
+
+<style>
+   .container {
+    position: relative;
+    text-align: center;
+    color: white;
+   }
+
+   .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   }
+
+   .row {
+    display: flex;
+   }
+
+   .column {
+    flex: 33.33%
+   }
+</style>
+
 </head>
 <body>
+<div class="container">    
+    <div class="row">
+        <div class="column">
+            <img src="img/MarbleCanyon.JPG" alt="Marble Canyon">
+        </div>
+        <div class="column">
+            <img src="img/Delphinium.JPG" alt="Delphinium">
+        </div>
+        <div class="column">
+            <img src="img/CrochetPurse.JPG" alt="Crochet Flower Purse">
+        </div>
+    </div>
+    
+    <div class="centered">
+        <h1>Sobia's Portfolio :&#41;</h1>
+    </div>
 
-<h1>My Projects</h1>
-<p>:&#41;</p>
+</div>
+
+<h2>About Me</h2>
+<p>Me...</p>
+
+<h2>My Projects</h2>
+<p>Projects...</p>
+
+<h2>My Experience</h2>
+<p>Experience...</p>
+
 
 </body>
 </html>
