--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </div>
     </div>
     
-    <div class="centered">
+    <!-- <div class="centered">
         <h1>Sobia's Portfolio :&#41;</h1>
-    </div>
+    </div> -->
 
 </div>
 
