--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
 <div class="row">
     <div class="column">
-        <img src="img/MarbleCanyon.JPG" alt="Marble Canyon">
+        <img src="img/MarbleCanyon.JPG" alt="Marble Canyon" style="width:100%">
     </div>
     <div class="column">
-        <img src="img/Delphinium.JPG" alt="Delphinium">
+        <img src="img/Delphinium.JPG" alt="Delphinium" style="width:100%">
     </div>
     <div class="column">
-        <img src="img/CrochetPurse.JPG" alt="Crochet Flower Purse">
+        <img src="img/CrochetPurse.JPG" alt="Crochet Flower Purse" style="width:100%">
     </div>
 </div>
 
