--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
 <title>Sobia's Portfolio</title>
 
 <style>
+    img {
+    border-radius: 5px;
+    width:100%;
+   }
+
+    h1 {
+    font-size:4vw;
+    font-family: "Lucida Handwriting", "Courier New", monospace;
+   }
+
    .container {
     position: relative;
     text-align: center;
     color: white;
+    padding: 5px
    }
 
    .centered {
@@ -17,6 +28,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    backdrop-filter: blur(5px);
+    padding-left: 15px;
+    padding-right: 15px;
    }
 
    .textleft {
