--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Sobia's Portfolio</title>
@@ -13,7 +14,33 @@
 
     h1 {
     font-size:4vw;
-    font-family: "Lucida Handwriting", "Courier New", monospace;
+    font-family: "Playfair Display";
+   }
+
+    h2 {
+    font-size:2vw;
+    font-family: "Playfair Display";
+   }
+
+   .header {
+    overflow: hidden;
+    background-color: #FFF5EE;
+    padding:20px;
+    font-family: "Playfair Display";
+   }
+
+   .header links {
+    color: black;
+    text-align: center;
+    font-size:2vw;
+   }
+
+   .header links:hover {
+    background-color: #D3D3D3;
+   }
+
+   .header-right {
+    float: right;
    }
 
    .container {
@@ -29,8 +56,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
     backdrop-filter: blur(5px);
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 25px;
+    padding-right: 25px;
+    border-radius: 15px
    }
 
    .textleft {
@@ -54,6 +82,14 @@
 </head>
 <body>
 
+<div class="header">
+    <div class="header-right">
+        <links href="about-me">About Me</links>
+        <links href="my-experience">My Experience</links>
+        <links href="my-projects">My Projects</links>
+    </div>
+</div>
+
 <div class="container">    
     <div class="row">
         <div class="column">
@@ -74,14 +110,14 @@
 
 <div class="textcontainer">
     <div class="textleft">
-        <h2>About Me</h2>
+        <h2 id="about-me">About Me</h2>
         <p>Me...</p>
 
-        <h2>My Projects</h2>
-        <p>Projects...</p>
-
-        <h2>My Experience</h2>
+        <h2 id="my-experience">My Experience</h2>
         <p>Experience...</p>
+
+        <h2 id="my-projects">My Projects</h2>
+        <p>Projects...</p>
     </div>
 </div>
 
