--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
    }
 
     h1 {
-    font-size:4vw;
+    font-size:6vw;
     font-family: "Playfair Display";
+    font-weight: normal;
    }
 
     h2 {
@@ -23,9 +24,10 @@
    }
 
    .header {
+    float: left;
     overflow: hidden;
     background-color: #FFF5EE;
-    padding:50px;
+    padding:20px;
     font-family: "Playfair Display";
     border-radius: 5px;
    }
@@ -53,7 +55,6 @@
     outline: 0.5rem solid #FFF5EE;
     background-color: #C3AED6;
     border-radius: 0.5rem;
-    /* font: bold 3rem "Playfair Display";; */
     margin: 2rem;
     padding: 4rem;
     outline-offset: 0.5rem;
