--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
    }
 
     h2 {
-    font-size:2vw;
+    font-size:3vw;
     font-family: "Playfair Display";
+    font-weight: normal;
+    padding: 5px;
    }
 
    .header {
@@ -34,13 +36,15 @@
    .header a {
     color: black;
     text-align: center;
-    font-size:1vw;
-    margin: 0px 20px
+    font-size:2vw;
+    margin: 0px 20px;
+    text-decoration: none;
    }
 
    .header a:hover {
     background-color: #D3D3D3;
     padding: 10px;
+    border-radius: 2px;
    }
 
    .header-right {
@@ -147,29 +151,29 @@
     </div>
 </div>
 
-<div style="background-color: #E6E6FA;">
+<div style="background-color: #E6E6FA; margin-top: 0; margin-bottom: 0;">
     <h2 id="about-me">About Me</h2>
     <p>Me...</p>
 </div>
 
-<div style="background-color: #F5E0E0;">
-    <h2 id="my-experience">My Experience</h2>
+<div style="background-color: #F5E0E0; margin-top: 0; margin-bottom: 0;">
+    <h2 id="my-experience" style="text-align: center;">My Experience</h2>
     <div class="row">
         <div class="column">
-            <img src="img/MarbleCanyon.JPG" alt="Marble Canyon" style="width:100%">
+            <div style="background-color: #D3D3D3; border-radius: 5px; padding: 5px;">Experience 1</div>
         </div>
         <div class="column">
-            <img src="img/Delphinium.JPG" alt="Delphinium" style="width:100%">
+            <div style="background-color: #D3D3D3; border-radius: 5px; padding: 5px;">Experience 2</div>
         </div>
         <div class="column">
-            <img src="img/CrochetPurse.JPG" alt="Crochet Flower Purse" style="width:100%">
+            <div style="background-color: #D3D3D3; border-radius: 5px; padding: 5px;">Experience 3</div>
         </div>
     </div>
     <p>Experience...</p>
 </div>
 
-<div style="background-color: #E6E6FA;">
-    <h2 id="my-projects">My Projects</h2>
+<div style="background-color: #E6E6FA; margin-top: 0; margin-bottom: 0;">
+    <h2 id="my-projects" style="text-align: center;">My Projects</h2>
     <p>Projects...</p>
 </div>
 
