--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@
     font-size:3vw;
     font-family: "Playfair Display";
     font-weight: normal;
-    padding: 10px;
+    /* padding: 1vh; */
+    margin: 1vh;
+    text-align: center;
+   }
+
+   p {
+    margin: 1vh;
+    font-size:1vw;
    }
 
    div {
     margin-top: 0px;
     margin-bottom: 0px;
-    padding: 0px;
-
    }
 
    .header {
@@ -151,7 +156,10 @@
     <div class="row">
         <div class="column left">
             <h2 id="about-me">About Me</h2>
-            <p>Me...</p>
+            <p>Hi, I'm Sobia and this is my Portfolio!............................................................................
+                .....................................................</p>
+            <p>...</p>
+            <p>...</p>
         </div>
         <div class="column middle">
             <img src="img/MarbleCanyon.JPG" alt="Marble Canyon" class="crop-long">
@@ -168,23 +176,51 @@
 </div>
 
 <div style="background-color: #F5E0E0;">
-    <h2 id="my-experience" style="text-align: center;">My Experience</h2>
+    <h2 id="my-experience">My Experience</h2>
     <div class="row">
         <div class="column" style="flex:33.33%">
-            <div style="background-color: #FFF5EE; border-radius: 5px; padding: 5px;">Experience 1</div>
+            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">Experience 1</div>
         </div>
         <div class="column" style="flex:33.33%">
-            <div style="background-color: #FFF5EE; border-radius: 5px; padding: 5px;">Experience 2</div>
+            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">Experience 2</div>
         </div>
         <div class="column" style="flex:33.33%">
-            <div style="background-color: #FFF5EE; border-radius: 5px; padding: 5px;">Experience 3</div>
+            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">Experience 3</div>
         </div>
     </div>
-    <p>Experience...</p>
 </div>
 
 <div style="background-color: #E6E6FA;">
-    <h2 id="my-projects" style="text-align: center;">My Projects</h2>
+    <h2 id="my-projects">My Projects</h2>
+        <div class="row">
+            <div class="column" style="flex:25%">
+                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 1</div>
+            </div>
+            <div class="column" style="flex:25%">
+                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 2</div>
+            </div>
+            <div class="column" style="flex:25%">
+                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 3</div>
+            </div>
+            <div class="column" style="flex:25%">
+                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 4</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column" style="flex:25%">
+                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 5</div>
+            </div>
+            <div class="column" style="flex:25%">
+                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 6</div>
+            </div>
+            <div class="column" style="flex:25%">
+                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 7</div>
+            </div>
+            <div class="column" style="flex:25%">
+                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 8</div>
+            </div>
+        </div>
+
     <p>Projects...</p>
 </div>
 
