--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <style>
     img {
     border-radius: 5px;
-    width:100%;
+    width: 100%;
    }
 
     h1 {
-    font-size:6vw;
+    font-size: 6vw;
     font-family: "Playfair Display";
     font-weight: normal;
    }
@@ -23,13 +23,13 @@
     font-family: "Playfair Display";
     font-weight: normal;
     /* padding: 1vh; */
-    margin: 1vh;
+    margin: 1vh 1vw;
     text-align: center;
    }
 
    p {
-    margin: 1vh;
-    font-size:1vw;
+    margin: 1vh 1vw;
+    font-size: 1.5vw;
    }
 
    div {
@@ -40,7 +40,7 @@
    .header {
     overflow: hidden;
     background-color: #FFF5EE;
-    padding:20px;
+    padding: 20px;
     font-family: "Playfair Display";
     border-radius: 5px;
    }
@@ -48,7 +48,7 @@
    .header a {
     color: black;
     text-align: center;
-    font-size:2vw;
+    font-size: 2vw;
     margin: 0px 20px;
     text-decoration: none;
    }
@@ -76,33 +76,6 @@
     padding: 4rem;
     outline-offset: 0.5rem;
     text-align: center
-   }
-
-   .container {
-    position: relative;
-    text-align: center;
-    color: white;
-    padding: 5px;
-   }
-
-   .centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    backdrop-filter: blur(5px);
-    padding-left: 25px;
-    padding-right: 25px;
-    border-radius: 15px
-   }
-
-   .textleft {
-    text-align: left;
-    display: inline-block;
-   }
-
-   .textcontainer {
-    text-align: center;
    }
 
    .row {
@@ -179,13 +152,25 @@
     <h2 id="my-experience">My Experience</h2>
     <div class="row">
         <div class="column" style="flex:33.33%">
-            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">Experience 1</div>
+            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">
+                <p>Experience 1</p>
+                <p>...</p>
+                <p>...</p>
+            </div>
         </div>
         <div class="column" style="flex:33.33%">
-            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">Experience 2</div>
+            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">
+                <p>Experience 2</p>
+                <p>...</p>
+                <p>...</p>
+            </div>
         </div>
         <div class="column" style="flex:33.33%">
-            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">Experience 3</div>
+            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">
+                <p>Experience 3</p>
+                <p>...</p>
+                <p>...</p>
+            </div>
         </div>
     </div>
 </div>
@@ -194,36 +179,64 @@
     <h2 id="my-projects">My Projects</h2>
         <div class="row">
             <div class="column" style="flex:25%">
-                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 1</div>
+                <div style="outline: 1vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                    <p>Project 1</p>
+                    <p>...</p>
+                    <p>...</p>
+                </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 2</div>
+                <div style="outline: 1vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                    <p>Project 2</p>
+                    <p>...</p>
+                    <p>...</p>
+                </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 3</div>
+                <div style="outline: 1vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                    <p>Project 3</p>
+                    <p>...</p>
+                    <p>...</p>
+                </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 4</div>
+                <div style="outline: 1vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                    <p>Project 4</p>
+                    <p>...</p>
+                    <p>...</p>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="column" style="flex:25%">
-                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 5</div>
+                <div style="outline: 1vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                    <p>Project 5</p>
+                    <p>...</p>
+                    <p>...</p>
+                </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 6</div>
+                <div style="outline: 1vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                    <p>Project 6</p>
+                    <p>...</p>
+                    <p>...</p>
+                </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 7</div>
+                <div style="outline: 1vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                    <p>Project 7</p>
+                    <p>...</p>
+                    <p>...</p>
+                </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.5rem solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">Project 8</div>
+                <div style="outline: 1vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                    <p>Project 8</p>
+                    <p>...</p>
+                    <p>...</p>
+                </div>
             </div>
         </div>
-
-    <p>Projects...</p>
 </div>
-
-
 </body>
 </html>
