--- a/index.html
+++ b/index.html
@@ -148,25 +148,25 @@
     </div>
 </div>
 
-<div style="background-color: #F5E0E0;">
+<div style="background-color: #F5E0E0; margin-top: 0px; margin-bottom: 0px;">
     <h2 id="my-experience">My Experience</h2>
     <div class="row">
         <div class="column" style="flex:33.33%">
-            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">
+            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 0 0 1vh 1vw;">
                 <p>Experience 1</p>
                 <p>...</p>
                 <p>...</p>
             </div>
         </div>
         <div class="column" style="flex:33.33%">
-            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">
+            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 0 0 1vh 1vw;">
                 <p>Experience 2</p>
                 <p>...</p>
                 <p>...</p>
             </div>
         </div>
         <div class="column" style="flex:33.33%">
-            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 1vh 1vw;">
+            <div style="background-color: #FFF5EE; border-radius: 5px; margin: 0 0 1vh 1vw;">
                 <p>Experience 3</p>
                 <p>...</p>
                 <p>...</p>
@@ -179,28 +179,28 @@
     <h2 id="my-projects">My Projects</h2>
         <div class="row">
             <div class="column" style="flex:25%">
-                <div style="outline: 0.2vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                <div style="outline: 0.3vw solid #D3D3D3; border-radius: 5px; margin: 0 0 1vh 1vw;">
                     <p>Project 1</p>
                     <p>...</p>
                     <p>...</p>
                 </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.2vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                <div style="outline: 0.3vw solid #D3D3D3; border-radius: 5px; margin: 0 0 1vh 1vw;">
                     <p>Project 2</p>
                     <p>...</p>
                     <p>...</p>
                 </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.2vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                <div style="outline: 0.3vw solid #D3D3D3; border-radius: 5px; margin: 0 0 1vh 1vw;">
                     <p>Project 3</p>
                     <p>...</p>
                     <p>...</p>
                 </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.2vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                <div style="outline: 0.3vw solid #D3D3D3; border-radius: 5px; margin: 0 0 1vh 1vw;">
                     <p>Project 4</p>
                     <p>...</p>
                     <p>...</p>
@@ -209,28 +209,28 @@
         </div>
         <div class="row">
             <div class="column" style="flex:25%">
-                <div style="outline: 0.2vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                <div style="outline: 0.3vw solid #D3D3D3; border-radius: 5px; margin: 0 0 1vh 1vw;">
                     <p>Project 5</p>
                     <p>...</p>
                     <p>...</p>
                 </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.2vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                <div style="outline: 0.3vw solid #D3D3D3; border-radius: 5px; margin: 0 0 1vh 1vw;">
                     <p>Project 6</p>
                     <p>...</p>
                     <p>...</p>
                 </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.2vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                <div style="outline: 0.3vw solid #D3D3D3; border-radius: 5px; margin: 0 0 1vh 1vw;">
                     <p>Project 7</p>
                     <p>...</p>
                     <p>...</p>
                 </div>
             </div>
             <div class="column" style="flex:25%">
-                <div style="outline: 0.2vw solid #D3D3D3; border-radius: 5px; margin: 1vh 1vw;">
+                <div style="outline: 0.3vw solid #D3D3D3; border-radius: 5px; margin: 0 0 1vh 1vw;">
                     <p>Project 8</p>
                     <p>...</p>
                     <p>...</p>
