--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
 </div>
 
-<div style="background-color: #E6E6FA;">
+<div style="background-color: #E6E6FA; margin-top: 0px; margin-bottom: 0px;">
     <div class="row">
         <div class="column left">
             <h2 id="about-me">About Me</h2>
@@ -175,7 +175,7 @@
     </div>
 </div>
 
-<div style="background-color: #E6E6FA;">
+<div style="background-color: #E6E6FA; margin-top: 0px; margin-bottom: 0px;">
     <h2 id="my-projects">My Projects</h2>
         <div class="row">
             <div class="column" style="flex:25%">
