--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
    }
 
    div {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    /* margin-top: 0px;
+    margin-bottom: 0px; */
+    margin: 0 0 0 0;
    }
 
    .header {
@@ -125,7 +126,7 @@
     </div>
 </div>
 
-<div style="background-color: #E6E6FA; margin-top: 0px; margin-bottom: 0px;">
+<div style="background-color: #E6E6FA;">
     <div class="row">
         <div class="column left">
             <h2 id="about-me">About Me</h2>
@@ -148,7 +149,7 @@
     </div>
 </div>
 
-<div style="background-color: #F5E0E0; margin-top: 0px; margin-bottom: 0px;">
+<div style="background-color: #F5E0E0;">
     <h2 id="my-experience">My Experience</h2>
     <div class="row">
         <div class="column" style="flex:33.33%">
@@ -175,7 +176,7 @@
     </div>
 </div>
 
-<div style="background-color: #E6E6FA; margin-top: 0px; margin-bottom: 0px;">
+<div style="background-color: #E6E6FA;">
     <h2 id="my-projects">My Projects</h2>
         <div class="row">
             <div class="column" style="flex:25%">
