--- a/index.html
+++ b/index.html
@@ -119,11 +119,13 @@
         <a href="#my-projects">My Projects</a>
     </div>
 </div>
+
 <div class="outerbox">
     <div class="innerbox">
         <h1>Sobia's Portfolio :&#41;</h1>    
     </div>
 </div>
+
 <div style="background-color: #E6E6FA;">
     <div class="row">
         <div class="column left">
@@ -146,7 +148,8 @@
         </div>
     </div>
 </div>
-<div style="background-color: #F5E0E0;">
+
+<div style="background-color: #F5E0E0; padding-top: 1px;">
     <h2 id="my-experience">My Experience</h2>
     <div class="row">
         <div class="column" style="flex:33.33%">
@@ -172,7 +175,8 @@
         </div>
     </div>
 </div>
-<div style="background-color: #E6E6FA;">
+
+<div style="background-color: #E6E6FA; padding-top: 1px;">
     <h2 id="my-projects">My Projects</h2>
         <div class="row">
             <div class="column" style="flex:25%">
