--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
     width: 25%;
    }
 
+   .container {
+    margin: 0;
+   }
+
    .crop-sq {
   	height: 10vh;
     object-fit: cover;
@@ -129,19 +133,19 @@
 <div style="background-color: #E6E6FA;">
     <div class="row">
         <div class="column left">
-            <h2 id="about-me">About Me</h2>
-            <p>Hi, I'm Sobia and this is my Portfolio!............................................................................
-                .....................................................
-            ...
-            ...
-            ...
-            ...
-            ...
-            ...
-            ...
-            ...
-            ...
-            </p>
+            <div class="container">
+                <h2 id="about-me">About Me</h2>
+                <p>Hi, I'm Sobia and this is my Portfolio!............................................................................
+                    .....................................................</p>
+                <p>...</p>
+                <p>...</p>
+                <p>...</p>
+                <p>...</p>
+                <p>...</p>
+                <p>...</p>
+                <p>...</p>
+                <p>...</p>
+            </div>
         </div>
         <div class="column middle">
             <img src="img/MarbleCanyon.JPG" alt="Marble Canyon" class="crop-long">
