--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     text-align: center; 
     font-size: 2vw;
     font-family: 'Didact Gothic';
+    border: none;
    }
 
    .header {
@@ -125,14 +126,15 @@
    }
 
    .projectPopUp {
-    position: absolute;
+    position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
     z-index: 1000;
     visibility: hidden;
     background-color: #D3D3D3;
     border-radius: 5px;
-    width: 100%;     
+    width: 70%;
+    transition: background-color 0.3s ease-in-out;     
    }
 </style>
 
@@ -208,7 +210,7 @@
         <div class="row">
             <div class="column" style="flex:25%">
                 <button onclick="openProjectPopUp()">
-                    SpeakEasy SDK (Capstone)
+                    <b>SpeakEasy SDK</b> (Capstone)
                 </button>
             </div>
             <div class="projectPopUp" id="project">
