--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
     visibility: hidden;
     background-color: #D3D3D3;
     border-radius: 5px;
-    width: 70%;  
+    width: 70%;
+    transition: background-color 0.3s ease-in-out;     
    }
 </style>
 
@@ -209,7 +210,7 @@
         <div class="row">
             <div class="column" style="flex:25%">
                 <button onclick="openProjectPopUp()">
-                    <b>SpeakEasy SDK</b> (Capstone)
+                    SpeakEasy SDK (Capstone)
                 </button>
             </div>
             <div class="projectPopUp" id="project">
