--- a/index.html
+++ b/index.html
@@ -126,15 +126,14 @@
    }
 
    .projectPopUp {
-    position: fixed;
+    position: absolute;
     left: 50%;
     transform: translate(-50%, 0);
     z-index: 1000;
     visibility: hidden;
     background-color: #D3D3D3;
     border-radius: 5px;
-    width: 70%;
-    transition: background-color 0.3s ease-in-out;     
+    width: 70%;  
    }
 </style>
 
